Streamlining Analytics and Vhista CS name changes

--- a/Vhista.xcodeproj/xcshareddata/xcschemes/Vhista CS.xcscheme
+++ b/Vhista.xcodeproj/xcshareddata/xcschemes/Vhista CS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0D73C73522DEFF2E00B8BD57"
-               BuildableName = "VhistaDev.app"
-               BlueprintName = "VhistaDev"
+               BuildableName = "Vhista CS.app"
+               BlueprintName = "Vhista CS"
                ReferencedContainer = "container:Vhista.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0D73C73522DEFF2E00B8BD57"
-            BuildableName = "VhistaDev.app"
-            BlueprintName = "VhistaDev"
+            BuildableName = "Vhista CS.app"
+            BlueprintName = "Vhista CS"
             ReferencedContainer = "container:Vhista.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -62,8 +62,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0D73C73522DEFF2E00B8BD57"
-            BuildableName = "VhistaDev.app"
-            BlueprintName = "VhistaDev"
+            BuildableName = "Vhista CS.app"
+            BlueprintName = "Vhista CS"
             ReferencedContainer = "container:Vhista.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
