Add Share Image Functionality

--- a/Vhista/es-419.lproj/Info.plist
+++ b/Vhista/es-419.lproj/Info.plist
@@ -43,6 +43,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Necesitamos acceso para poder grabar imágenes tomadas con Vhista</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
